--- a/registration.html
+++ b/registration.html
@@ -141,6 +141,8 @@
   <div class="content-container">
     <h2>Anmeldung</h2>
     <form action="https://formsubmit.co/svbbdg2013@gmail.com" method="POST" id="registrationForm">
+      <input type="hidden" name="_next" value="https://svbbdg2013.github.io/summer-football-registration/confirmation.html">
+      <input type="hidden" name="_subject" value="FiestaFussbalTurnier25">
       <h3>Persönliche Angaben</h3>
       <label for="registrantName">Ihr Name</label>
       <input type="text" id="registrantName" name="registrantName" required>
