--- a/registration.html
+++ b/registration.html
@@ -147,8 +147,8 @@
       <label for="registrantName">Ihr Name</label>
       <input type="text" id="registrantName" name="registrantName" required>
       
-      <label for="contact">Kontaktinformationen</label>
-      <input type="email" id="contact" name="contact" placeholder="E-Mail" required>
+      <label for="email">Kontaktinformationen</label>
+      <input type="email" id="email" name="email" placeholder="Email Address" required>
       <input type="tel" id="phone" name="phone" placeholder="Telefonnummer">
       
       <label for="clubName">Vereinsname</label>
