--- a/registration.html
+++ b/registration.html
@@ -192,9 +192,9 @@
 
       const formData = new FormData(this);
       const emailData = {
-        registrant_name: formData.get("registrantName"),
+        registrantName: formData.get("registrantName"),
         email: formData.get("email"),
-        club_name: formData.get("clubName"),
+        clubName: formData.get("clubName"),
         payment_details: "Bank Name: SV Bank\nIBAN: DE89 3704 0044 0532 0130 00\nBIC: COBADEFFXXX\nVerwendungszweck: Fiesta Fußball",
       };
 
