--- a/registration.html
+++ b/registration.html
@@ -141,12 +141,14 @@
   <div class="content-container">
     <h2>Anmeldung</h2>
     <form action="https://formsubmit.co/svbbdg2013@gmail.com" method="POST" id="registrationForm">
+      <input type="hidden" name="_subject" value="FiestaFussbal Registration">
+      <input type="hidden" name="_next" value="https://svbbdg2013.github.io/summer-football-registration/confirmation.html">
       <h3>Persönliche Angaben</h3>
       <label for="registrantName">Ihr Name</label>
       <input type="text" id="registrantName" name="registrantName" required>
       
       <label for="contact">Kontaktinformationen</label>
-      <input type="email" id="contact" name="contact" placeholder="E-Mail" required>
+      <input type="email" id="email" name="email" placeholder="Email Address" required>
       <input type="tel" id="phone" name="phone" placeholder="Telefonnummer">
       
       <label for="clubName">Vereinsname</label>
